# COURS

./: .gitignore  ctf.txt  files.txt
asmX86/: .~lock.TP 1.docx#  .~lock.TP 2.docx#  TP 1.docx  mainout
asmX86/jour0/: TP 2.docx  TP3.asm  main  main.c  main.s  mon_executable  out
crypto/: help.txt  main-old.py  main.py  prime_ex01.py  prime_ex02.py  result.txt
crypto/exam/: RSA-BASIC-2023.txt  RSA-DL-2023.txt  RSA-ELGAMAL1-2023.txt  RSA-LISTE-2023.txt  (+3 more)
day04/: .hexdumped.txt.swp  .thumb-one.txt.swp  ip-test.txt  nfs.txt  thumb-one.txt  thumbnail-one-tcp.pcap  thumbnail.pcap
day06/: .02-db.py.swn  .02-db.py.swo  .02-db.py.swp  .app.py.swp  .whisky.py.swp
fuzzing/: lci_fuzzer.py
gestion-du-risque/: risquemanagment.md
grand-reseaux/: in_my_life_piano-amz.flac  router.txt  router_explained.txt  test.flac
ios/: ._jtool2  00.md  HelloWorld(5)  binary.nosigned  encrypted.db  entitlements.xml  exfiltrationData.db  ghidraMain.txt  liefShaBin.py  original_binary  output.plist  pythonDecrypt.py  settings.plist
java-card/: README.txt
lang_python/: app.py
rappel-reseaux/: hexdumped.txt
rust/: Cargo.toml
rust/rust1/: Cargo.toml  result.txt  test.svm
rust/rust1/src/: main.rs  stack.rs  vm.rs
rust/rust1/src/old/: main-part4.rs  main-part6.rs
rust/rust1/src/steps/: step7_2.svm  step7_3.svm
rust/rust1/src/utils/: disassembler.rs  instructions.rs  mod.rs
rust2/: Cargo.toml
secu_hardware/: i2c-exam.md
suricata/: sujet.txt
tls/: RENDU_sujet.md  sujet.txt
unix/: echofile.txt  etc.tar.bz2  etc.tar.xz  script.py  test2.tar  test2.tar.bz2  test2.tar.xz
(+379 files in other folders)
