[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
serde = { version = "1.0.192", features = ["derive"] }
